--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-GFMY08C4SM"
+      src="https://www.googletagmanager.com/gtag/js?id=G-X35GM90NWB"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -26,7 +26,7 @@
         dataLayer.push(arguments);
       }
       gtag("js", new Date());
-      gtag("config", "G-GFMY08C4SM");
+      gtag('config', 'G-X35GM90NWB');
     </script>
   </head>
   <body>
